[gd_scene load_steps=2 format=3 uid="uid://cx53veofakypf"]

[ext_resource type="Script" path="res://scripts/ui_scripts/title.gd" id="1_eumi7"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eumi7")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.129412, 0.145098, 0.160784, 1)

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Stealth Game"
horizontal_alignment = 1

[node name="Continue" type="Button" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Start Game" type="Button" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Settings" type="Button" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Guide" type="Button" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Guide"

[node name="Quit" type="Button" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/Guide" to="." method="_on_guide_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
